# LaNeta

./: .gitignore  Algorithm.py  README.md  ThLd.py  Untitled.ipynb  clThLd.py  conv.py  estimator.py  fastc.pyx  gen.py  laneta.py  main.py  meson.build  prot.ipynb  pyproject.toml  setup.py  simulator_setup.txt  tap.txt  theo.py
LaNeta/: ThLd.py  fastc.pyx  gen.py  meson.build  theo.py
saved_data/: T1-0_T2-10_M1-0.2_M2-0.2.npy  T1-0_T2-2_M1-0.2_M2-0.2.npy  T1-0_T2-5_M1-0.2_M2-0.2.npy  T1-10_T2-10_M1-0.2_M2-0.2.npy  T1-10_T2-2_M1-0.2_M2-0.2.npy  T1-10_T2-5_M1-0.2_M2-0.2.npy  T1-20_T2-10_M1-0.2_M2-0.2.npy  T1-20_T2-2_M1-0.2_M2-0.2.npy  T1-20_T2-5_M1-0.2_M2-0.2.npy  T1-40_T2-10_M1-0.2_M2-0.2.npy  T1-40_T2-2_M1-0.2_M2-0.2.npy  T1-40_T2-5_M1-0.2_M2-0.2.npy  T1-5_T2-10_M1-0.2_M2-0.2.npy  T1-5_T2-2_M1-0.2_M2-0.2.npy  T1-5_T2-5_M1-0.2_M2-0.2.npy  oldT1-20_T2-2_M1-0.2_M2-0.2.npy  oldT1-40_T2-2_M1-0.2_M2-0.2.npy
utilites/: get_interpolation_files  merger.sh  phys2gen.py  preparation.sh  tpgen.py
