[build-system]
requires  = [
    "wheel",
    "meson>=0.60.3",
    "mesonpep517",
    "ninja",
    "numpy>=1.19.5",
    "Cython>=0.29.18",
    "cyvcf2",
    "scipy"
]

build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Vladimir Shchur et al"
author-email="vshchur@hse.ru"
home-page="https://scg.hse.ru"
project-urls=[
    "Source, https://github.com/Genomics-HSE/LaNeta",
]
summary = "Statistical method for estimating parameters (e. g. the timing) of two pulse model based on three locus Linkage Disequilibrium and Local Ancestry."
requires-python="py3"
description-file="README.md"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires  = [
    "numpy>=1.19.5",
    "cyvcf2",
]
